--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
