Move contents of popup subdirectory to ui directory

--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
       "96": "icons/icon.svg"
     },
     "default_title": "Simple Redirect",
-    "default_popup": "ui/popup/index.html",
+    "default_popup": "ui/popup.html",
     "browser_style": true
   },
   "developer": {
