--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:pug": "pug src/ui -o ui",
     "watch:pug": "pug src/ui -o ui -w",
     "build:webpack": "webpack --progress --mode=production",
-    "watch:webpack": "webpack --progress --watch",
+    "watch:webpack": "webpack --progress --mode=development --watch",
     "build": "npm-run-all --parallel build:*",
     "watch": "npm-run-all --parallel watch:*",
     "zip:make": "jszip-cli -f",
