--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "web-ext": "^4.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
