--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,12 @@
   "name": "Simple Redirect",
   "author": "Hari Saksena",
   "version": "1.5.0",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "{51e8a34c-5738-43e8-aa4a-a0eddf5d7922}",
+      "strict_min_version": "55.0"
+    }
+  },
   "icons": {
     "48": "icons/icon.svg",
     "96": "icons/icon.svg"
