--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "babel-loader": "^8.1.0",
     "bulma": "^0.9.0",
+    "bulma-divider": "^0.2.0",
+    "bulma-switch": "^2.0.0",
     "css-loader": "^3.6.0",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
